<resources>
    <string name="app_name">두드론</string>
    <string name="nav_home">홈</string>
    <string name="nav_myPage">마이페이지</string>
    <string name="nav_caution">드론 주행 시 유의사항</string>
    <string name="nav_about">두드론 소개</string>
    <string name="nav_terms">개인정보 및 약관</string>
    <string name="register">가입하기</string>
    <string name="login">로그인하기</string>
    <string name="modTitle">개인정보 수정</string>
    <string name="authName">이름</string>
    <string name="authEmail">이메일</string>
    <string name="nickTv">닉네임</string>
    <string name="charSel">캐릭터 선택</string>
    <string name="alan">알랭 두 드론</string>
    <string name="tom">톰 아토</string>
    <string name="saveBtn">저장</string>

    <string name="assem_step1">드론이란?</string>
    <string name="assem_step2">드론 부품 소개</string>
    <string name="assem_step3">드론 조립</string>
    <string name="assem_step4">드론의 작동 원리</string>
    <string name="assem_step5">드론 작동해보기</string>

    <string name="train_step1">두드론(DoDrone)</string>
    <string name="train_step2">두드론의 손동작 인식</string>
    <string name="train_step3">실습해보기 - 데이터 수집</string>
    <string name="train_step4">실습해보기 - 데이터 전처리</string>
    <string name="train_step5">실습해보기 - 학습시키기</string>

    <string name="classMsg">수업을 선택해주세요.</string>
    <string name="lastWatched">마지막 시청 영상</string>

    <string name="class0">아직 시청한 영상이 없습니다.</string>
    <string name="class1">1-(1) 인공지능이란?</string>
    <string name="class2">1-(2) 인공지능의 종류</string>
    <string name="class3">1-(3) ㅇㄴㅇㄴㄹ</string>
    <string name="class4">2-(1) 드론이란?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>