<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:onClick="menuOnclick"/>
    <item
        android:id="@+id/nav_myPage"
        android:title="@string/nav_myPage"
        android:onClick="menuOnclick"/>
    <item
        android:id="@+id/nav_about"
        android:title="@string/nav_about"
        android:onClick="menuOnclick"/>
    </group>

    <item android:title="외부 링크">
    <menu>
        <item
                android:id="@+id/nav_caution"
                android:title="@string/nav_caution"/>

        <item
                android:id="@+id/nav_terms"
                android:title="@string/nav_terms"/>
    </menu>
    </item>

</menu>